fixed read more news on mobile

--- a/css/sass/_mediaQ.scss
+++ b/css/sass/_mediaQ.scss
@@ -70,7 +70,7 @@
     height: inherit;
     text-align: center;
     font-size: 0.8em;
-    min-width: 3em;
+    min-width: 80px;
   }
   .missionVision {
     &-container {
@@ -165,7 +165,7 @@
     height: inherit;
     text-align: center;
     font-size: 0.8em;
-    min-width: 3em;
+    min-width: 80px;
   }
 }
 
